Bug 167133 - CRASH: Bracketing selected text deletes equation
Summary: CRASH: Bracketing selected text deletes equation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: bibisected, bisected
Depends on:
Blocks:
 
Reported: 2025-06-20 17:04 UTC by Xisco Faulí
Modified: 2025-07-11 12:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["SwTextFrame::HideAndShowObjects()"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-06-20 17:04:47 UTC
Steps to reproduce:
1. Open attachment 201379 [details] from bug 167132
2. Select all
3. Shift + 8

-> Crash

Reproduced in

Version: 25.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 211c193b1c7391b4f1c1172214a90899de19b06a
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 mikhail.machine 2025-06-24 07:38:47 UTC
Hello Xisco Faulí,

I can confirm that the bug is present in master.

Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 12; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2025-06-25 10:28:07 UTC
The crash is reproducible since a7dd2e5a4712083cc5934e1d677e7dff86ceb7e6
Comment 4 Mike Kaganski 2025-06-26 05:40:42 UTC
(In reply to Xisco Faulí from comment #0)
> Steps to reproduce:
> ...
> 3. Shift + 8

Please always explain what your key combinations mean, they depend on your keyboard layout. E.g., on my system, Shift+8 inserts an asterisk -> just replaces the selection, and doesn't crash. OTOH, Shift+9 inserts an opening parenthesis -> crashes, as you describe. But what's interesting, if you do Shift+8 -> Ctrl+Z (undo) -> Shift+9, it doesn't crash (but drops the formula).
Comment 5 Commit Notification 2025-06-27 07:41:55 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/565eb34955bb71406a3a8ea470f1d4f13b5892a0

tdf#167133: Be prepared that frame's object's anchor may be null

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-06-27 11:04:49 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/cab85b8cc7806d4f1ac2191b2e4d78a38f75812c

tdf#167133: Be prepared that frame's object's anchor may be null

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-06-27 12:40:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/9bede86c07a9848c1dce170e0ce827b9e578270d

tdf#167133: Be prepared that frame's object's anchor may be null

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-07-11 12:36:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-5":

https://git.libreoffice.org/core/commit/3e683f1b5e700a00d3cd7e937e6f77c34a5ae687

tdf#167133: Be prepared that frame's object's anchor may be null

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.